--- a/requirements.txt
+++ b/requirements.txt
@@ -15,9 +15,9 @@ Pillow>=10.0.0
 albumentations>=1.3.1
 
 # Data Science
-numpy>=1.24.0
+numpy>=1.24.0, <2.0.0
 pandas>=2.0.0
-scikit-learn>=1.3.0
+scikit-learn>=1.3.0, <1.6.0
 scipy>=1.11.0
 
 # Visualization
